.k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gestevent-ingress
  namespace: gestevent
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gestevent.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gestevent-api-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gestevent-front-service
                port:
                  number: 3000
